@@ -1,6 +1,8 @@
 CHANGES
 
 Trunk
+	Detect input and output files when they are the same.
+
 	Detect incompatible options with encoding.
 
 	Change short flag of new option and improve help messages.
